# flappyBird

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
flappy_rl/: __init__.py  cli.py  env.py  evaluate.py  experiments.py  model.py  play_trained.py  render.py  train_a2c.py  train_a3c.py  train_ppo.py  utils.py
results/a2c_only/: a2c_model.pt  a2c_result.json  summary.csv
results/a3c_only/: a3c_model.pt  a3c_result.json  summary.csv
results/compare_mlp_fs1/: a3c_model.pt  a3c_result.json  summary.csv
results/ppo_only/: ppo_model.pt  ppo_result.json  summary.csv
